--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,13 @@
     color: "#0f0f0f"
 
 }
+
+body {
+    padding: 50px 0px 50px 0px;
+    z-index: 0;
+}
+
+.navbar-dark {
+    background-color: crimson;
+    
+}
