--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,11 @@ body {
     background-color: crimson;
     
 }
+
+.tab-content {
+    border-left: 1px solid #D1C4E9;
+    border-right: 1px solid #D1C4E9;
+    border-bottom: 1px solid #D1C4E9;
+    padding: 10px
+
+}
