--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,10 @@ body {
     left: 0;
     min-height: 300px;
 }
+
+#carouselbutton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
